Added Digital watch

--- a/index.html
+++ b/index.html
@@ -30,5 +30,23 @@
     </div>
     
     <script type="text/JavaScript" src="script.js" ></script> <!-- JavaScript File Link -->
+<!-- 
+    <label class="switch">
+            <p>Clock Toggle</p>
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label> -->
+
+    <div class="digital-clock">
+        <div id="Date"></div>
+          <ul>
+              <li id="hours"></li>
+              <li id="point">:</li>
+              <li id="min"></li>
+              <li id="point">:</li>
+              <li id="sec"></li>
+          </ul>
+        </div>
+
 </body>
 </html>
