--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         </div>
         <div class="diallines"></div> <!--Clock Minutes Dial Lines-->
     </div>
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.0.min.js"></script>
     <script type="text/JavaScript" src="script.js" ></script> <!-- JavaScript File Link -->
 <!-- 
     <label class="switch">
